Changelog for Config-INI

{{$NEXT}}

0.018     2011-06-02 21:51:50 America/New_York
          bump up version of IO::File required (thanks, ABH!)

0.017     2010-12-11 10:20:34 America/New_York
          avoid test failures on Win32 by using . instead of TMPDIR
          for writing test files (thanks, Ahmad M. Zawawi)

0.016     2010-09-04
          add Mixin::Linewise to CARP_NOT -- better reporting of error location

0.015     2010-08-22
          documentation improvements (thanks, castaway)

0.014     2009-01-16
          add repo to metadata

0.013     2008-06-05
          refactored some of the read_* write_* stuff to Mixin::Linewise

0.012     2008-04-12
          BUG FIX: allow for different error message on cygwin

          fixed typo in docs (thanks HDP)

0.011     2007-11-19
          BUG FIX: "0" was not a valid section name

0.010     2007-11-04
          BUG FIX: detect when we're dumping something we won't be able to read
          BUG FIX: fix tests when filetest.pm is not available (pre-5.6)
            (thanks to CPAN tester srezic)
          DOCS: documentation of core file format in Config::INI

0.009     2007-11-01
          add placeholding Config::INI (content soon!)

0.008     2007-10-31
          update Module::Install

0.007     2007-08-21
          use filetest.pm in tests to avoid -r-related failures on Cygwin

0.006     2007-08-15
          use -T instead of -t in tests; -t is a perl 5.008 feature

0.005     2007-08-13
          add finalize method, lazy-load starting section method (this means
          that you can have starting_section die to prevent properties outside
          of explicity setting)

          added Config::INI::Writer (largely done by Florian Ragwitz)

          further improved subclassability of Reader (thanks again, Florian!)

0.004     2007-05-12
          fix asinine error in test, poorly adapted from Config::Tiny

0.003     2007-05-10
          first release